UC#1 Create LWC

--- a/src/force-app/main/default/lwc/orederList/orederList.html
+++ b/src/force-app/main/default/lwc/orederList/orederList.html
@@ -2,6 +2,7 @@
     <lightning-card title="Orders">
         <template if:true={orders}>
             <table class="slds-table slds-table_cell-buffer slds-table_bordered">
+                <caption>Orders List</caption>
                 <thead>
                     <tr>
                         <th scope="col">Number</th>
