UC#1 Create LWC

--- a/src/force-app/main/default/lwc/ordersListView/ordersListView.html
+++ b/src/force-app/main/default/lwc/ordersListView/ordersListView.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="Orders List" icon-name="standard:order">
         <div class="slds-p-around_medium">
-            <table class="slds-table slds-table_cell-buffer slds-table_bordered">
+            <table class="slds-table slds-table_cell-buffer slds-table_bordered" aria-label="Orders List">
                 <thead>
                     <tr>
                         <th scope="col">
