--- a/src/force-app/main/default/lwc/ordersListView/ordersListView.html
+++ b/src/force-app/main/default/lwc/ordersListView/ordersListView.html
@@ -1,5 +1,30 @@
 <template>
-    <lightning-card title="Orders List" icon-name="standard:order">
+        <div class="slds-page-header slds-page-header_object-home">
+            <div class="slds-media">
+                <div class="slds-media__figure">
+                    <span class="slds-icon_container slds-icon-standard-order" title="Orders">
+                        <lightning-icon icon-name="standard:orders" alternative-text="Orders" size="small"></lightning-icon>
+                        <span class="slds-assistive-text">Orders</span>
+                    </span>
+                </div>
+                <div class="slds-media__body">
+                    <div class="slds-grid slds-grid_align-spread">
+                        <div class="slds-col">
+                            <div class="slds-media slds-no-space slds-grow">
+                                <div class="slds-media__body">
+                                    <h1 class="slds-page-header__title" title="Orders List" style="width: 200px;">Orders</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slds-col slds-no-flex slds-grid slds-align-top">
+                            <div class="slds-button-group" role="group">
+                                <lightning-button label="New" onclick={createNewOrder}></lightning-button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="slds-p-around_medium">
             <table class="slds-table slds-table_cell-buffer slds-table_bordered" aria-label="Orders List">
                 <thead>
@@ -38,5 +63,4 @@
                 </tbody>
             </table>
         </div>
-    </lightning-card>
 </template>
