--- a/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.html
+++ b/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.html
@@ -3,7 +3,7 @@
         <template lwc:if={orders}>
           <div class="slds-m-around_medium">
             <template lwc:if={error}>{error}</template>
-            <table class="slds-table_bordered">
+            <table class="slds-table_bordered" aria-label="Orders List">
                 <thead>
                     <tr>
                         <th scope="col">Number</th>
@@ -19,10 +19,15 @@
                         <tr key={order.orderId}>
                             <td><a data-id={order.orderId} onclick={handleOrderNumberClick}>{order.orderNumber}</a></td>
                             <td>{order.startDate}</td>                            
-                            <td>{order.orderStatus}</td>                            
-                            <td>{order.amount} $</td>
-                            <td data-id={order.orderId} onclick={handleActivate}>Activate</td>
-                            <td data-id={order.orderId} onclick={handleMarkAsShipped}>Mark as Shipped</td>                        
+                            <td>{order.orderStatus}</td>
+                            <td><lightning-formatted-number value={order.amount} format-style="currency" currency-code="USD" currency-display-as="symbol"></lightning-formatted-number></td>
+                            <template lwc:if={order.contentDocumentId}><lightning-icon data-id={order.contentDocumentId} size="small" icon-name="utility:download" alternative-text="Download Invoice" onclick={handleDownloadInvoice}></lightning-icon></template>
+                            <template lwc:else><td></td></template>
+                            <td><lightning-combobox key={order.orderId} data-id={order.orderId}
+                                name="Action"                                
+                                value={value}
+                                options={rowActions}
+                                onchange={handleActionSelected} ></lightning-combobox></td>                                                 
                         </tr>
                     </template>
                 </tbody>
