--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.html
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.html
@@ -4,6 +4,7 @@
             key-field="Id"
             data={orders}
             columns={columns}>
+            onrowaction={handleRowAction}
         </lightning-datatable>
     </lightning-card>
 </template>
