UC#2 Create pagination function PAUSE

--- a/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.html
+++ b/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.html
@@ -2,6 +2,17 @@
     <lightning-card title="Account Related Orders">
         <template lwc:if={orders}>
           <div class="slds-m-around_medium">
+            <div>
+                <button onclick={goToPreviousPage} disabled={isFirstPage}>Previous</button>
+                <button onclick={goToNextPage} disabled={isLastPage}>Next</button>
+                <span>Page: {currentPage} of {totalPages}</span>
+                <lightning-combobox name="pageSize"
+                        label="Select Page Size"
+                        value={pageSize}
+                        options={pageSizeOptions}
+                        onchange={handlePageSizeChange}>
+    </lightning-combobox>
+              </div>
             <div class="slds-m-bottom_medium">
                 <lightning-button variant="brand" label="Activate" title="Activate" onclick={handleActivateButtonSelected} disabled={noDraftSelected}></lightning-button>
                 <lightning-button variant="brand" label="Mark as Shipped" title="Mark as Shipped" onclick={handleMarkAsShippedButtonSelected} disabled={noActivatedSelected}></lightning-button>
