--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.html
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.html
@@ -3,8 +3,8 @@
         <lightning-datatable
             key-field="Id"
             data={orders}
-            columns={columns}>
-            onrowaction={handleRowAction}
+            columns={columns}
+            onrowaction={handleRowAction}>
         </lightning-datatable>
     </lightning-card>
 </template>
