UC#1 Order actions

--- a/src/force-app/main/default/lwc/orderList/orderList.html
+++ b/src/force-app/main/default/lwc/orderList/orderList.html
@@ -9,7 +9,8 @@
         <lightning-datatable
             key-field="id"
             data={data}
-            columns={columns}>
+            columns={columns}
+            onrowaction={handleRowAction}>
     </lightning-datatable>
     </template>
 </template>
