UC#1 Order status

--- a/src/force-app/main/default/lwc/orderList/orderList.html
+++ b/src/force-app/main/default/lwc/orderList/orderList.html
@@ -7,7 +7,7 @@
     </template>
     <template lwc:else>
         <c-order-datatable
-            key-field="id"
+            key-field="orderId"
             data={data}
             columns={columns}
             onrowaction={handleRowAction}>
