UC#2 Create pagination function FINAL + 1hour 10 mins

--- a/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.html
+++ b/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.html
@@ -6,11 +6,12 @@
                 <button onclick={goToPreviousPage} disabled={isFirstPage}>Previous</button>
                 <button onclick={goToNextPage} disabled={isLastPage}>Next</button>
                 <span>Page: {currentPage} of {totalPages}</span>
-                <lightning-combobox name="pageSize"
-                        label="Select Page Size"
+                <lightning-combobox name="pageSize" class="pagination-combobox"
+                        label="Select page size"                        
                         value={pageSize}
                         options={pageSizeOptions}
-                        onchange={handlePageSizeChange}>
+                        onchange={handlePageSizeChange}
+                        dropdown-alignment="auto">
     </lightning-combobox>
               </div>
             <div class="slds-m-bottom_medium">
